# prepper

./: .gitignore  CLAUDE.md  PRODUCT.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/alembic/versions/: 31b321f97368_add_comments_and_notes_to_menus_sketch.py  a0b1c2d3e4f5_add_source_to_categories_outlets_suppliers.py  a2b3c4d5e6f7_add_supplier_ingredient_tags.py  a7b8c9d0e1f2_add_sequence_to_recipe_tastings.py  b8c9d0e1f2g3_add_sequence_to_recipe_tastings.py  c5d6e7f8a9b0_add_menus_sketch_table.py  h1i2j3k4l5m6_add_row_level_security.py  i1j2k3l4m5n6_menu_sketch_relational_refactor.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  costing.py  ingredients.py  menu_sketch_section_item_comments.py  menu_sketch_section_items.py  menu_sketch_sections.py  menu_sketches.py  recipe_tastings.py  sub_recipes.py  supplier_ingredient_tags.py  supplier_ingredients.py  suppliers.py  tastings.py
backend/app/domain/: __init__.py  costing_service.py  fmh_import_service.py  ingredient_service.py  menu_sketch_section_item_comment_service.py  menu_sketch_section_item_service.py  menu_sketch_section_service.py  menu_sketch_service.py  recipe_service.py  recipe_tasting_service.py  storage_service.py  subrecipe_service.py  supabase_auth_service.py  tasting_session_service.py  (+1 more)
backend/scripts/: reset_fmh.py
backend/tests/: test_auth.py  test_menu_sketch_relational.py  test_menu_sketches.py  test_recipes.py  test_rls_integration.py  test_supplier_ingredient_outlet_scope.py  test_supplier_ingredient_tags.py  test_supplier_ingredients_list.py  test_tastings.py
(+228 files in other folders)
