[project]
name = "recipe-builder-api"
version = "0.1.0"
description = "Recipe Builder MVP - FastAPI backend for recipe management and costing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "supabase>=2.0.0",
    "httpx>=0.26.0",
    "anthropic>=0.48.0",
    "PyJWT[crypto]>=2.10.0",
    "ebb-flow-tech-auth @ git+https://github.com/Ebb-Flow-Tech/auth.git@v0.1.0#subdirectory=python",
    "cachetools>=5.3.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
